@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

interface Visitor{
    -visitSpace(space : Space)
    -visitPartition(partition : Partition)
}

class AreaFinderById{
    -id : String
    -area : Area;
    -foundArea : boolean;
    +AreaFinderById(id : String)
    +getId() : String
    +getArea() : Area
    +isAreaFound() : boolean
    +visitSpace(space : Space)
    +visitPartition(partition : Partition)
}

class AreaSpacesFinder{
    -areaSpaces : ArrayList<Space>
    +AreaSpacesFinder()
    +getAreaSpaces() : ArrayList<Space>
    +visitSpace(space : Space)
    +visitPartition(partition : Partition)

}

Visitor<|-- AreaFinderById
Visitor<|-- AreaSpacesFinder

abstract class Area {
# id : String
+ {abstract} getId() : String
+ {abstract} getSpaces() : Space[]
+ {abstract} acceptVisitor(visitor : Visitor) : void
}

class Partition extends Area{
+ Partition(id : String, description : String, father : Partition)
+ addChildrenArea(area : Area)
+ getAreas() : Area[]
+ getId() : String
+ getSpaces : Space[]
+ acceptVisitor(visitor : Visitor) : void
}

Partition o--> "*" Area : areas

class Space extends Area{
+ Space(id : String, description : String, father : Partition)
+ addDoorGivingAccess(door : Door)
+ getDoorsGivingAccess() : Door[]
+ getId() : String
+ getSpaces() : Space[]
+ acceptVisitor(visitor : Visitor) : void
}

@enduml
